# Planner

./: .gitignore  README.md  planner_schedule.json  planner_todos.md  planner_todos_archive.md  pyproject.toml
src/planner/: business.py  holidays.py  main.py  models.py  productivity.py  scheduling.py  settings.py  todo_details.py  todos.py
src/planner/calendar_api/: __init__.py  base.py  demo.py  factory.py  macos.py  windows.py
src/planner/plugins/: __init__.py  base.py  jira.py
src/planner/ui/: category_colors.py  main_window.py  settings_dialog.py  todo_details_widget.py  todo_table.py  trash_drop_zone.py  week_view.py
tests/: test_business.py  test_holidays.py  test_productivity.py  test_scheduling.py  test_settings.py  test_todos.py  test_ui.py
